# eco-advisor-ai

./: LICENSE  README.md  app.py  requirements.txt  setup.cfg
src/eco_advisor_ai/: __init__.py  calculations.py  community.py  config.py  gamification.py  groq_client.py  impact_visualizer.py  main.py  offset_integration.py  roadmap_generator.py  simulation_engine.py  visualization.py
tests/: test_calculations.py
