 [metadata]
name = eco_advisor_ai
version = 0.1.0
author = Your Name
description = AI-powered sustainability advisor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/eco-advisor-ai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/eco_advisor_ai
packages = find:
install_requires =
    streamlit>=1.33.0
    plotly>=5.18.0
    pandas>=2.2.0
    python-dotenv>=1.0.0
    groq>=0.3.0

[options.entry_points]
console_scripts =
    eco-advisor = eco_advisor_ai.app:main
